<resources>
    <string name="app_name">AK5PM</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="title_activity_bottom">bottom_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="current_data">Current Data</string>
    <string name="saved_data">Saved Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_data">Save data</string>
    <string name="about">About</string>
    <string name="input_custom_temperature_data">Input custom temperature data...</string>
    <string name="input_custom_humidity_data">Input custom humidity data...</string>
    <string name="update">Update</string>
</resources>